[gd_scene load_steps=5 format=2]

[ext_resource path="res://cactus.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/cactus_small.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=2]
resource_local_to_scene = true
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 34, 73 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 35.25 )

[node name="cactus" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="cactus_sprite" type="Sprite" parent="."]
position = Vector2( 0, -36.5 )
texture = SubResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, -35.75 )
shape = SubResource( 1 )
disabled = true

[node name="detect_area" type="Area2D" parent="."]
position = Vector2( 0, -36.5 )

[node name="collision" type="CollisionShape2D" parent="detect_area"]
position = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="visibility_notifer" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.500002, -35.5 )
scale = Vector2( 2.35, 3.55 )

[connection signal="body_entered" from="detect_area" to="." method="player_entered"]
[connection signal="screen_exited" from="visibility_notifer" to="." method="visibility_notifer_screen_exited"]
